[gd_scene load_steps=19 format=3 uid="uid://nq44njc1umgp"]

[ext_resource type="Script" uid="uid://cxkqsxx3k73lw" path="res://chs/ch_base_body.gd" id="1_3udkj"]
[ext_resource type="Texture2D" uid="uid://bf3fdg7iq3cik" path="res://chs/imgs/768_4D_Character0.png" id="2_3udkj"]
[ext_resource type="Script" uid="uid://do6y12jhkssnn" path="res://scripts/player_state_machine.gd" id="3_l5ukk"]
[ext_resource type="Script" uid="uid://bj8dqpn60h74f" path="res://scripts/state_idle.gd" id="4_puul8"]
[ext_resource type="Script" uid="uid://6ir0sqmn5ayn" path="res://chs/player_camera.gd" id="4_vtd28"]
[ext_resource type="Script" uid="uid://c7ac8x4q8w8u" path="res://scripts/state_walk.gd" id="5_ler18"]
[ext_resource type="Script" uid="uid://6m1laamj5lii" path="res://chs/debug_button.gd" id="6_y6m2g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f5jf1"]

[sub_resource type="Animation" id="Animation_l5ukk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3udkj"]
resource_name = "idle_down"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ler18"]
resource_name = "idle_left"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_y6m2g"]
resource_name = "idle_right"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_puul8"]
resource_name = "idle_up"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_vtd28"]
resource_name = "walk_down"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_l82qq"]
resource_name = "walk_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [45, 44, 43, 42, 41, 40]
}

[sub_resource type="Animation" id="Animation_wl145"]
resource_name = "walk_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53]
}

[sub_resource type="Animation" id="Animation_3fg7g"]
resource_name = "walk_up"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D_Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5ukk"]
_data = {
&"RESET": SubResource("Animation_l5ukk"),
&"idle_down": SubResource("Animation_3udkj"),
&"idle_left": SubResource("Animation_ler18"),
&"idle_right": SubResource("Animation_y6m2g"),
&"idle_up": SubResource("Animation_puul8"),
&"walk_down": SubResource("Animation_vtd28"),
&"walk_left": SubResource("Animation_l82qq"),
&"walk_right": SubResource("Animation_wl145"),
&"walk_up": SubResource("Animation_3fg7g")
}

[node name="ch_base" type="Node2D"]

[node name="test_player_body" type="CharacterBody2D" parent="."]
position = Vector2(48, 48)
script = ExtResource("1_3udkj")

[node name="DEBUG" type="Control" parent="test_player_body"]
layout_mode = 3
anchors_preset = 0
offset_left = -48.0
offset_top = -48.0
offset_right = -8.0
offset_bottom = -8.0

[node name="Button" type="Button" parent="test_player_body/DEBUG"]
layout_mode = 0
offset_left = 23.0
offset_right = 72.0
offset_bottom = 31.0
text = "100.0"
script = ExtResource("6_y6m2g")

[node name="Sprite2D_Idle" type="Sprite2D" parent="test_player_body"]
texture = ExtResource("2_3udkj")
hframes = 8
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="test_player_body"]
position = Vector2(0, 23)
scale = Vector2(1.79, 1.11)
shape = SubResource("CapsuleShape2D_f5jf1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="test_player_body"]
libraries = {
&"": SubResource("AnimationLibrary_l5ukk")
}

[node name="PlayerCamera" type="Camera2D" parent="test_player_body"]
script = ExtResource("4_vtd28")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_l5ukk")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_puul8")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_ler18")
